Fixing the top and bottom margins of container to be even.

--- a/source/stylesheets/lib/_content__social.scss
+++ b/source/stylesheets/lib/_content__social.scss
@@ -35,7 +35,7 @@ $m: content__social;
 // Social share links for each article
 article .nav__social {
   float: none;
-  padding: 5% 0 1% 0;
+  padding-bottom: 1%;
 
   a {
     font-family: 'Montserrat', Verdana, Arial, sans-serif;
