--- a/source/partials/_week_template.html.erb
+++ b/source/partials/_week_template.html.erb
@@ -47,7 +47,7 @@
         <%= partial 'partials/kind_text', :locals => {:row => row} %>
       <% elsif row.kind.to_s.end_with?('_quote') %>
         <%= partial 'partials/kind_quote', :locals => {:row => row} %>
-      <% elsif (row.kind == "left" || row.kind == "right" || row.kind == "overlay" || row.kind == "divider") %>
+      <% elsif (row.kind == "left" || row.kind == "image" || row.kind == "right" || row.kind == "overlay" || row.kind == "divider") %>
         <% if row.link.present?
           markdown_syntax_link = /\[([^\]]+)\]\(([^)]+)\)/.match(row.link.to_s)
           if(!markdown_syntax_link.nil? && markdown_syntax_link.size == 3) # this is markdown syntax!
