Moving hamburger nav into a partial

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -59,3 +59,4 @@ $byline-sponsor-logo: "intel-logo-blue.png"; // color version of logo
 @import "lib/parallax";
 @import "lib/figures";
 @import "lib/content__social";
+@import "lib/hamburger-menu";
