--- a/source/stylesheets/lib/_hamburger-menu.scss
+++ b/source/stylesheets/lib/_hamburger-menu.scss
@@ -32,10 +32,8 @@
 	    position: fixed;
 	    top: 44px;
 	    bottom: 0;
-	    height: 100%;
-	    overflow: auto;
+	    overflow: scroll;
 	    left: -100%;
-	    height: 100%;
 	    width: 25em;
 	    max-width: 100%;
 	    background-color: #1d1d1d;
@@ -122,6 +120,7 @@
 	    ul.theme {
 	    	padding: 1.5em 1em;
 	    	font-size: 0.9em;
+	    	border-bottom: 1px solid #272727;
 
 	    	h2, h3, a {
 	    		color: #fff;
@@ -131,6 +130,10 @@
 				text-transform: uppercase;
 				font-size: 1.5em;
 				text-align: center;
+	    	}
+
+	    	&:last-child {
+	    		margin-bottom: 2em;
 	    	}
 	    }
 
