Scraping master clean of hamburger nav

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -38,12 +38,12 @@
 
    <nav>
       <span class="nav__vertical">
-        <a class="nav__burger" href="#">☰</a>
+        <!--<a class="nav__burger" href="#">☰</a>-->
         <a href="/">
           <svg class="nav__vertical__logo svg-icon" viewBox="0 0 474 86"><use xlink:href="#verge"></use></svg>
         </a>
       </span>
-      <%= partial 'partials/hamburger_nav', :locals => {:weeks => weeks} %>
+      <!--<%= partial 'partials/hamburger_nav', :locals => {:weeks => weeks} %>-->
       <%= partial 'partials/social_share' %>
       <span class="nav__label">From our sponsor</span>
     </nav>
