Adding new Vox Media logo in footer

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -47,6 +47,9 @@ $nav-background: $primary;
 $sponsor-logo: "Intel-Logo-White.png"; // white version of logo
 $byline-sponsor-logo: "intel-logo-blue.png"; // color version of logo
 
+// Vox Media Logo (Footer)
+$vox-logo: "vox-media-logo.png";
+
 @import "lib/svg";
 @import "lib/footer";
 @import "lib/slider";
