--- a/source/stylesheets/lib/_footer.scss
+++ b/source/stylesheets/lib/_footer.scss
@@ -16,7 +16,15 @@
 
 .footer__logo {
   float: right;
-  margin-bottom: 1em;
+  width: 180px;
+  height: 50px;
+  background-image: image-url($vox-logo);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  &:hover {
+    border-bottom: 0px;
+  }
 }
 
 .footer__text {
