--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
+    <meta name="robots" content="noindex">
 
     <title><%= app_name %></title>
 
