--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,7 +2,10 @@
 <html lang="en-US" class="no-js">
   <head>
     <meta charset="utf-8">
-
+    
+    <meta property="og:title" content="SPONSORED: Harmony Boilerplate">
+    <meta property="og:description" content="Harmony Boilerplate">
+    <!--<meta property="og:image" content="http://cdn0.vox-cdn.com/assets/4871818/GOS_explainer.jpg">-->
     <meta name="google" value="notranslate" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
