--- a/source/partials/_kind_ama.html.erb
+++ b/source/partials/_kind_ama.html.erb
@@ -1,5 +1,6 @@
 <%= set_section "content container" %>
-<div class="<%= row.kind %>">
+
+<div class="ama_text">
   <% if row.title.present? %>
     <h2><%= row.title %></h2>
   <% end %>
