--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -18,20 +18,87 @@ $break_medium: 800px;
 $break_small: 500px;
 
 // Colors
-$primary: #0073c3;
-$background: #fff9f3;
+$primary: #81c441; // orange
+$background: #fff;
+$background-secondary: #f5f5f5; // muted light green
 $text: #555;
 $black: #000;
+$action-color: #ff7d49; // orange
+$accent-color: #ff7d49; // green
+$twitter: #55acee;
+$facebook: #3b5998;
+$googleplus: #dd4b39;
 
 // Typography
-$headline-font: 'Source Sans Pro', Verdana, sans-serif;
+$headline-font: 'UniversLTStd-XBlack', "Arial Black", Helvetica, Arial, sans-serif;
 $headline-weight: normal;
-$text-font: 'Source Sans Pro', Verdana, sans-serif;
+$paragraph-font: 'UniversLTStd-Light', Helvetica, Arial, sans-serif;
+$text-font: 'UniversLT-Condensed', 'UniversLTStd-CnObl', 'UniversLT-CondensedBold', 'UniversLTStd-BoldCnObl', Helvetica, Arial, sans-serif;
 $text-weight: normal;
 $font-size: 16px;
 $line-height: 1.5;
 
+// Vox Media Logo (Footer)
+$vox-logo: "vox-media-logo.png";
+
 // Add custom fonts here
+@import url("//hello.myfonts.net/count/2afb11");
+
+// univers light condensed  
+@font-face {
+  font-family: 'UniversLT-Condensed';
+  src: image-url('webfonts/2AFB11_0_0.eot');
+  src: image-url('webfonts/2AFB11_0_0.eot?#iefix') format('embedded-opentype'),
+       image-url('webfonts/2AFB11_0_0.woff') format('woff'),
+       image-url('webfonts/2AFB11_0_0.ttf') format('truetype');
+}
+ 
+// univers light condensed bold
+@font-face {
+  font-family: 'UniversLT-CondensedBold';
+  src: image-url('webfonts/2AFB11_1_0.eot');
+  src: image-url('webfonts/2AFB11_1_0.eot?#iefix') format('embedded-opentype'),
+       image-url('webfonts/2AFB11_1_0.woff') format('woff'),
+       image-url('webfonts/2AFB11_1_0.ttf') format('truetype');
+}
+ 
+// univers light standard  
+@font-face {
+  font-family: 'UniversLTStd-Light';
+  src: image-url('webfonts/2AFB11_2_0.eot');
+  src: image-url('webfonts/2AFB11_2_0.eot?#iefix') format('embedded-opentype'),
+       image-url('webfonts/2AFB11_2_0.woff') format('woff'),
+       image-url('webfonts/2AFB11_2_0.ttf') format('truetype');
+}
+ 
+// univers light condensed oblique
+@font-face {
+  font-family: 'UniversLTStd-CnObl';
+  src: image-url('webfonts/2AFB11_3_0.eot');
+  src: image-url('webfonts/2AFB11_3_0.eot?#iefix') format('embedded-opentype'),
+       image-url('webfonts/2AFB11_3_0.woff') format('woff'),
+       image-url('webfonts/2AFB11_3_0.ttf') format('truetype');
+}
+ 
+// univers 85 extra black
+@font-face {
+  font-family: 'UniversLTStd-XBlack';
+  src: image-url('webfonts/2AFB11_4_0.eot');
+  src: image-url('webfonts/2AFB11_4_0.eot?#iefix') format('embedded-opentype'),
+       image-url('webfonts/2AFB11_4_0.woff') format('woff'),
+       image-url('webfonts/2AFB11_4_0.ttf') format('truetype');
+}
+ 
+// univers light condensed bold oblique
+@font-face {
+  font-family: 'UniversLTStd-BoldCnObl';
+  src: image-url('webfonts/2AFB11_5_0.eot');
+  src: image-url('webfonts/2AFB11_5_0.eot?#iefix') format('embedded-opentype'),
+       image-url('webfonts/2AFB11_5_0.woff') format('woff'),
+       image-url('webfonts/2AFB11_5_0.ttf') format('truetype');
+}
+ 
+
 // @font-face {
 //   font-family: ;
 //   font-weight: ;
@@ -44,11 +111,8 @@ $nav-background: $primary;
 
 // Sponsor logo (30px tall)
 // must be in images dir
-$sponsor-logo: "Intel-Logo-White.png"; // white version of logo
-$byline-sponsor-logo: "intel-logo-blue.png"; // color version of logo
-
-// Vox Media Logo (Footer)
-$vox-logo: "vox-media-logo.png";
+$sponsor-logo: "bp-invigorate-logo.png"; // white version of logo
+$byline-sponsor-logo: "bp-invigorate-logo.png"; // color version of logo
 
 @import "lib/svg";
 @import "lib/footer";
