--- a/source/stylesheets/lib/_hamburger-menu.scss
+++ b/source/stylesheets/lib/_hamburger-menu.scss
@@ -25,6 +25,15 @@
 	    &:active {
 	      line-height: 54px;
 	    }
+	    .nav__burger__patty {
+	    	&:first-child {
+	    		margin-top: 12px;
+	    	}
+				height: 3px;
+				width: 1em;
+				margin-bottom: 5px;
+				background-color: #fff;
+			}
 	  }
 
 	  ul.menu {
@@ -62,7 +71,7 @@
 
 	    ul {
 	    	margin: 0;
-	    	padding: 0;
+	    	//padding: 0;
 	    	list-style-type: none;
 	    }
 
