--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -3,9 +3,780 @@
 // One-off styling goes here
 body, p, h1, h2, h3, h4 {
 	font-family: $text-font;
-	font-weight: 400;
 }
 
-.overlay h1 {
-	font-weight: 300;
+.slider h1 {
+  text-transform: uppercase;
+  @media (max-width: $break_small) {
+    font-size: 1.4em;
+  }
+}
+
+.subhead {
+  font-family: $text-font;
+  text-transform: uppercase;
+}
+
+.slider .subhead {
+  color: #fff;
+  font-size: 1.3em;
+  -webkit-font-smoothing: antialiased;
+  @media (max-width: $break_small) {
+    font-size: 0.8em;
+  }
+}
+
+.wrapper {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+
+}
+.sponsor-logos {
+  max-width: 150px;
+  display: block;
+  z-index: 302;
+  margin: 0 auto;
+  text-align: center;
+  left: 50%;
+  background-color: #fff;
+  padding: 1em 2em;
+  font-size: 1em;
+  @media (max-width: $break_small) {
+    max-width: 70px;
+    font-size: 0.8em;
+  }
+  .subhead {
+    letter-spacing: 1pt;
+    color: $text;
+  }
+  img {
+    margin: 0 auto;
+  }
+}
+
+.slider .play-icon {
+  @media (max-width: 580px) {
+    padding: 0.5em;
+  }
+  @media (max-width: $break_small) {
+    padding: 0.3em;
+  }
+}
+
+// new menu
+ul.menu {
+  ul.menu-categories {
+    border-bottom: 2px solid #000;
+    padding: 0;
+    font-size: 0px;
+    @mixin bg-no-repeat {
+      background-repeat: no-repeat;
+      background-position: 50%;
+    }
+
+    li {
+      box-sizing: border-box;
+      width: 19.7%;
+      display: inline-block;
+      border-right: 2px solid #000;
+      text-align: center;
+      padding-bottom: 10px;
+      font-size: 12px;
+      @media (max-width: $break_small) {
+        font-size: 9px;
+      }
+      text-transform: uppercase;
+      letter-spacing: 0.5pt;
+      // delete this later. where our svg icons will go.
+      span.svg {
+        display: block;
+        width: 50%;
+        height: 40px;
+        color: lighten(#000,30%);
+        margin: 10px auto 0 auto;
+        font-size: 0.9em;
+      }
+      &:last-child {
+        border-right: 0;
+      }
+      &:hover {
+        cursor: pointer;
+        background-color: lighten(#000,20%);
+      }
+      &[data-category='latest'] > .svg {
+        background-image: image-url('icon-latest.png');
+        @include bg-no-repeat;
+      }
+      &[data-category='longform'] > .svg {
+        background-image: image-url('icon-longform.png');
+        @include bg-no-repeat;
+      }
+      &[data-category='video'] > .svg {
+        background-image: image-url('icon-video.png');
+        @include bg-no-repeat;
+      }
+      &[data-category='ama'] > .svg {
+        background-image: image-url('icon-ama.png');
+        @include bg-no-repeat;
+      }
+      &[data-category='infographic'] > .svg {
+        background-image: image-url('icon-infographic.png');
+        @include bg-no-repeat;
+      }
+    }
+  }
+  ul.menu-content {
+    padding: 0;
+    li {
+      text-transform: uppercase;
+      border-bottom: 2px solid #000;
+      padding: 10px 0 15px 0;
+      .subhead, h2 {
+        margin: 0 20px;
+
+        &.video.special {
+          display: none;
+        }
+      }
+      .subhead {
+        font-size: 0.9em;
+      }
+      h2 {
+        padding: 0;
+        margin-top: -0.2em;
+        line-height: 0.5;
+      }
+      h2 a {
+        font-size: 0.4em;
+        color: #fff;
+        font-family: $headline-font;
+        font-weight: normal;
+        line-height: 0.5;
+        -webkit-font-smoothing: antialiased;
+        letter-spacing: 0.2pt;
+      }
+      &:hover {
+        background-color: lighten(#000,20%) !important;
+      }
+    }
+  }
+}
+
+// adjusting width for bp
+nav ul.menu {
+  width: 33em;
+  max-width: 100%;
+}
+
+// bp logo
+.nav-logo {
+  position: absolute;
+  top: 0;
+  left: 44px;
+  width: 79px;
+  display: inline;
+  @media (max-width: $break_small) {
+    width: 50px;
+  }
+}
+
+// nav label
+a .nav__label {
+  color: #fff;
+  font-family: $text-font;
+  text-transform: uppercase;
+  margin-right: 4em;
+  span {
+    text-transform: uppercase;
+  }
+  &:after {
+    width: 90px;
+  }
+}
+
+nav .nav__social {
+  @media (max-width: 580px) {
+    display: none;
+  }
+}
+
+article .nav__social {
+  padding-bottom: 2em;
+  @media (max-width: 580px) {
+    display: block;
+    padding-bottom: 0;
+  }
+}
+
+article .nav__social .nav__social__link {
+  margin-right: 0.3em;
+}
+
+// homepage styling
+
+// introductory blurb on homepage
+.bp-intro {
+  font-size: 1.5em;
+  font-family: $text-font;
+  color: $primary;
+  padding-top: 1em;
+  margin-top: 3em !important;
+  border-top: 1px solid $primary;
+  @media (max-width: $break_small) {
+    font-size: 1.3em;
+  }
+  .cobrands {
+    margin-top: 2em;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    color: $text;
+  }
+  strong {
+    color: #00a652;
+    font-family: 'UniversLTStd-BoldCnObl', Arial, sans-serif;
+  }
+  a.img {
+    margin-top: 4em;
+  }
+  a:hover {
+    border: 0;
+  }
+}
+
+// copywriters will have to wrap dropcaps in <span>.
+p span {
+  font-family: 'UniversLTStd-XBlack', 'Arial Black', Arial, sans-serif;
+    font-size: 3em;
+    float: left;
+    background-color: $primary;
+    color: #fff;
+    padding: 0.5em;
+    margin: 6px 10px 10px 0;
+}
+
+// pullquotes
+
+.left_quote h2, .right_quote h2 {
+  font-family: 'UniversLTStd-BoldCnObl', Arial, sans-serif;
+  font-size: 2.2em;
+  text-transform: none;
+  font-style: normal;
+  border: 0;
+  padding: 0.5em 0;
+}
+
+// paragraphs
+
+figure p, p, .left_quote p, .right_quote p {
+  font-family: $paragraph-font;
+}
+
+// the latest posts in this series
+// figure.left:before {
+//   content: '';
+//   display: block;
+//   position: absolute;
+//   left: -1000%;
+//   right: -8850%;
+//   background: #f5f5f5;
+//   z-index: -1;
+//   bottom: 0;
+//   top: 0;
+//   padding: 22% 0;
+// }
+
+// $firstLatestPost.prepend("<div class='latest-posts'>Latest Posts</div>");
+
+// the title of the next-click section
+.latest-posts {
+  text-transform: uppercase;
+  background-color: $primary;
+  color: #fff;
+  padding: 5px;
+  text-align: left;
+  max-width: 70em;
+  margin: 0 auto 30px auto;
+}
+
+section.next-click-wrapper {
+  background-color: #fff;
+}
+
+.action, a.action {
+  display: inline-block;
+  background-color: #ff7d49;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 6px 10px 3px 10px;
+  .next {
+    color: #fff;
+  }
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
+figure.next_click {
+  padding-bottom: 100px;
+  a.action:after {
+    content: '';
+    display: inline-block;
+    margin-left: 5px;
+    width: 7px;
+    height: 12px;
+    background-image: image-url('readmore-arrow.png');
+
+  }
+  img {
+    width: 38%;
+  }
+  .figure-content {
+    max-width: 55%;
+  }
+  @media (max-width: $break_medium) {
+    img, .figure-content { 
+      width: 100%;
+      display: block;
+    }
+    .figure-content {
+      width: 90%;
+      max-width: 90%;
+      padding-top: 1em;
+    }
+  }
+}
+
+// trying out gradient mixins.
+$gradientcolor-1: rgba(193,205,81,0.4);
+$gradientcolor-2: rgba(42,110,15,0.4);
+
+button.overlay:before {
+  content: '';
+  z-index: 10000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.article-info {
+  z-index: 10008;
+  text-align: center;
+  margin: 17% auto !important;
+  @media (max-width: 400px) {
+    margin-top: 37% !important;
+  }
+  width: 60% !important;
+  &.hidden {
+    display: none;
+  }
+}
+
+.category-home .article-info {
+  @media (max-width: $break_small) {
+    margin-top: 35% !important;
+  }
+}
+
+.category-video .article-info {
+  h1 {
+    display: none;
+  }
+  .subhead {
+    display: none;
+  }
+  .sponsor-logos .subhead {
+    display: block;
+  }
+  @media (max-width: $break_small) {
+    margin-top: 35% !important;
+  }
+}
+
+
+.sponsor-logos {
+  @media (max-width: $break_small) {
+    margin-top: 3em;
+  }
+  .subhead {
+    display: block;
+  }
+}
+
+
+.category-ama .article-info,
+.category-infographic .article-info,
+.category-longform .article-info {
+  @media (max-width: $break_small) {
+    margin-top: 30% !important;
+  }
+}
+
+.video-container {
+  z-index: 10007;
+}
+
+// AMA tweet text king
+.ama_text {
+  padding: 1em 0;
+  font-size: 1.2em;
+  @media (max-width: $break_small) {
+    font-size: 1em;
+  }
+  p {
+    font-size: 1.2em;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    line-height: 1.5em;
+  }
+  &:nth-of-type(odd) {
+    color: #00b0ff; // twitter blue make into var?
+  }
+  &:nth-of-type(even) {
+    color: #b0b0b0; // gray
+  }
+  &:nth-of-type(2n+2) {
+    margin-top: 2em;
+    padding-top: 3.5em;
+    border-top: 1px dotted #b0b0b0;
+  }
+
+  // h2 = the part that says "@username says:" and "Person says:"
+  h2 {
+    font-size: 1em;
+    color: inherit;
+  }
+}
+
+// video intro title block
+.video-intro {
+  background-color: $primary;
+  text-align: center;
+  color: #fff;
+  padding: 5em 0;
+  position: relative;
+  h2 {
+    color: #fff;
+    font-family: $headline-font;
+    text-transform: uppercase;
+    letter-spacing: 0.5pt;
+  }
+  .subhead {
+    -webkit-font-smoothing: antialiased;
+    font-size: 1.2em;
+  }
+  @media (max-width: $break_small) {
+    padding: 1em 0;
+    margin-bottom: 3em;
+  }
+}
+
+.nudge {
+  bottom: -30%;
+  @media (max-width: $break_small) {
+    bottom: -70%;
+  }
+}
+
+// infographic
+figure.infographic {
+  padding: 2em 0;
+  //background-color: $background-secondary;
+  img {
+    max-width: 70em;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+// hide play button + hover state on articles that are NOT video
+article.category-longform,
+article.category-ama,
+article.category-infographic,
+article.category-home {
+  .play-icon { 
+    display: none;
+  }
+}
+
+article.category-video li.active {
+  &:hover { cursor: pointer; }
+}
+
+.play-button__stroke {
+  fill: rgba(0,0,0,0.3);
+}
+
+// testing something for menu js
+.no-bg-image {
+  background: none !important;
+}
+
+.toggled-video {
+  height: 150px;
+  position: relative;
+  padding: 0 !important;
+}
+
+.video-gradient {
+  position: absolute;
+  height: 150px;
+  width: 100%;
+  @include background-image(linear-gradient(top left, $gradientcolor-1, $gradientcolor-2));
+}
+
+.toggled-meta {
+  text-align: center;
+  display: block;
+  position: absolute;
+  margin: 10% auto 0 auto;
+  width: 100%;
+}
+
+.inactive-category {
+  opacity: 0.5;
+}
+
+// social icons - customizing for bp
+.nav__social__icon.twitter,
+.nav__social__icon.facebook,
+.nav__social__icon.googleplus {
+  fill: #fff !important;
+}
+
+.nav__social [data-share-via] {
+  &:after {
+    color: #fff !important;
+  }
+  font-family: "UniversLT-Condensed";
+  padding: 0.5em;
+  font-size: 0.9em;
+  -webkit-font-smoothing: antialiased;
+}
+
+.nav__social [data-share-via="twitter"] {
+  background-color: $twitter;
+}
+
+.nav__social [data-share-via="facebook"] {
+  background-color: $facebook;
+}
+
+.nav__social [data-share-via="googleplus"] {
+  background-color: $googleplus;
+}
+
+nav .nav__social [data-share-via] {
+  background: none;
+}
+
+// new logo placement..
+.bp-logo {
+  position: fixed;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: auto;
+  margin-left: 50px;
+  @media (max-width: $break_medium) {
+    width: 50px;
+  }
+  @media (max-width: $break_small) {
+    width: 30px;
+  }
+}
+
+.bp-horiz-logo {
+  display: inline;
+  width: auto;
+  margin: 3px 0 0 50px;
+  @media (max-width: $break_medium) {
+    width: 150px;
+    margin-top: 13px;
+  }
+  @media (max-width: $break_small) {
+    width: 35%;
+    margin-top: 15px;
+  }
+}
+
+.nav__bp-logo {
+  display: inline;
+  width: auto;
+  float: right;
+  margin-right: 4em;
+}
+
+a .nav__label {
+  margin-right: 0;
+  @media (max-width: 580px) {
+    display: block;
+    margin-right: 5px;
+  }
+  @media (max-width: $break_small) {
+    margin-top: 20px;
+    width: 100%;
+    &:after {
+      width: 47px;
+      vertical-align: bottom;
+    }
+  }
+}
+
+// new border at the top of nav menu
+.slider li.active {
+  border-top: 5px solid $primary;
+}
+
+// making nav visible atop lede
+nav {
+  background: #81c441;
+}
+
+nav .nav-right {
+  position: absolute;
+  display: inline-block;
+  right: 0;
+  top: 0;
+}
+
+// z-index
+.slider {
+  z-index: 302;
+}
+
+.nav__background {
+  z-index: 301;
+}
+
+
+// typography
+.figure-content {
+  h3 {
+    font-family: $headline-font;
+    letter-spacing: 0.2pt;
+    text-transform: uppercase;
+    color: #000;
+    font-size: 2em;
+  }
+  .subhead {
+    font-size: 1.2em;
+  }
+}
+
+.text p, .left_quote p, .right_quote p, .next_click p {
+  line-height: 1.45em;
+  margin: 0.5em 0 1em 0;
+}
+
+@media (max-width: $break_small) {
+  .text h2 {
+    font-size: 1.3em;
+  }
+
+  .right_quote, .left_quote {
+    margin: 0;
+    padding: 0;
+    h2 {
+      font-size: 1.3em;
+    }
+    p {
+      font-size: 1em;
+    }
+  }
+
+  .next_click {
+    h3 {
+      font-size: 1.3em;
+    }
+    p {
+      font-size: 1em;
+    }
+  }
+
+  .video-intro {
+    font-size: 0.6em;
+  }
+}
+
+.right_quote, .left_quote {
+  margin: 0;
+  padding: 0;
+}
+
+// ama CTA styling
+.ama-submit {
+  margin: 2em 0;
+  text-align: center;
+  & > svg {
+    height: 50px;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  & > a {
+    color: $accent-color;
+    text-decoration: underline;
+    font-size: 1.3em;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 10px;
+    &:hover {
+      text-decoration: none;
+      border: 0;
+    }
+  }
+}
+
+// new nav bar madness
+.nav {
+  background-color: $primary;
+  height: 44px;
+}
+
+.horiz {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 303;
+}
+
+.fixed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: $primary;
+  height: 44px;
+  z-index: 304;
+}
+
+.logo {
+  @media (max-width: 400px) {
+    width: 40px;
+  }
+  width: 79px;
+  height: 137px;
+  background-color: transparent;
+  position: absolute;
+  left: 50px;
+}
+
+.right {
+  position: absolute;
+  right: 10px;
+  top: 0;
+}
+
+nav ul.menu {
+  z-index: 400;
+}
+
+// fix for IE showing img borders
+img {
+  border: none;
 }
